--- a/index.html
+++ b/index.html
@@ -5,9 +5,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Hello World!!!</h1>
+    <header>
+        <div class="logo">My Logo</div>
+        <nav>
+            <ul>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section class="hero">
+        <h1>Welcome to My Portfolio</h1>
+        <p>Something cool coming soon...</p>
+    </section>
+
+    <section id="projects">
+        <h2>Projects</h2>
+        <!-- Add project details here -->
+    </section>
+
+    <section id="about">
+        <h2>About</h2>
+        <!-- Add about details here -->
+    </section>
+
+    <section id="contact">
+        <h2>Contact</h2>
+        <!-- Add contact form or details here -->
+    </section>
+
+    <footer>
+        <p>© 2024 - Komiljon</p>
+    </footer>
+
     <script src="js/script.js"></script>
 </body>
 </html>
