--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 <body>
     <header>
         <div class="logo">My Logo</div>
-        <nav>
+        <button id="menu-toggle" aria-label="Toggle menu">
+            <img src="img/ham-menu.svg" alt="Open menu" class="menu-icon open-icon">
+            <img src="img/close-ham-menu.svg" alt="Close menu" class="menu-icon close-icon">
+        </button>
+        <nav id="navbar">
             <ul>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#about">About</a></li>
@@ -18,6 +22,7 @@
             </ul>
         </nav>
     </header>
+    
 
     <section class="hero">
         <h1>Welcome to My Portfolio</h1>
