about section base ok

--- a/index.html
+++ b/index.html
@@ -30,9 +30,25 @@
     </section>
 
     <section id="about">
-        <h2>About</h2>
-        <!-- Add about details here -->
+        <h2>About Me</h2>
+        <div class="about-content">
+            <div class="avatar">
+                <img src="img/my-portrait.png" alt="Your Name">
+            </div>
+            <div class="intro-text fade-in-element">
+                <h3>Hi, I'm Komiljon</h3>
+                <p>A passionate <strong>Frontend Developer</strong> who loves to bring ideas to life through code and design.</p>
+                <p>From Uzbekistan, I'm always eager to learn, create, and collaborate on exciting projects. Outside of coding, you'll find me traveling, gaming, or cooking.</p>
+                <ul class="fun-facts">
+                    <li>🍣 Love Sushi</li>
+                    <li>🎨 Creative Coder</li>
+                    <li>🎮 Moba Gamer</li>
+                </ul>
+                <p>Let’s create something amazing together!</p>
+            </div>
+        </div>
     </section>
+    
 
     <section id="projects">
         <h2>Projects</h2>
