projects base ok

--- a/index.html
+++ b/index.html
@@ -52,8 +52,27 @@
 
     <section id="projects">
         <h2>Projects</h2>
-        <!-- Add project details here -->
+        <div class="project-container">
+            <div class="project-card">
+                <img src="img/project1.jpg" alt="Project 1">
+                <div class="project-info">
+                    <h3>Project Title 1</h3>
+                    <p>A brief description of what this project is about.</p>
+                    <a href="#">View Project</a>
+                </div>
+            </div>
+            <div class="project-card">
+                <img src="img/project2.jpg" alt="Project 2">
+                <div class="project-info">
+                    <h3>Project Title 2</h3>
+                    <p>A brief description of what this project is about.</p>
+                    <a href="#">View Project</a>
+                </div>
+            </div>
+            <!-- Add more project cards as needed -->
+        </div>
     </section>
+    
 
     <section id="contact">
         <h2>Contact</h2>
