--- a/index.html
+++ b/index.html
@@ -76,8 +76,37 @@
 
     <section id="contact">
         <h2>Contact</h2>
-        <!-- Add contact form or details here -->
-    </section>
+        <div class="contact-content">
+            <div class="contact-info">
+                <h3>Get in Touch</h3>
+                <p>If you have any questions or just want to say hello, feel free to reach out to me!</p>
+                <ul>
+                    <li><strong>Email:</strong> <a href="mailto:you@example.com">you@example.com</a></li>
+                    <li><strong>Phone:</strong> <a href="tel:+1234567890">+123 456 7890</a></li>
+                    <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/yourprofile" target="_blank">Your LinkedIn</a></li>
+                    <li><strong>GitHub:</strong> <a href="https://github.com/yourusername" target="_blank">Your GitHub</a></li>
+                </ul>
+            </div>
+            <div class="contact-form">
+                <h3>Send Me a Message</h3>
+                <form>
+                    <div class="form-group">
+                        <label for="name">Name</label>
+                        <input type="text" id="name" name="name" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input type="email" id="email" name="email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="message">Message</label>
+                        <textarea id="message" name="message" rows="5" required></textarea>
+                    </div>
+                    <button type="submit">Send Message</button>
+                </form>
+            </div>
+        </div>
+    </section>   
 
     <footer>
         <p>© 2024 - Komiljon</p>
