added contact icons

--- a/index.html
+++ b/index.html
@@ -81,10 +81,9 @@
                 <h3>Get in Touch</h3>
                 <p>If you have any questions or just want to say hello, feel free to reach out to me!</p>
                 <ul>
-                    <li><strong>Email:</strong> <a href="mailto:you@example.com">you@example.com</a></li>
-                    <li><strong>Phone:</strong> <a href="tel:+1234567890">+123 456 7890</a></li>
-                    <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/yourprofile" target="_blank">Your LinkedIn</a></li>
-                    <li><strong>GitHub:</strong> <a href="https://github.com/yourusername" target="_blank">Your GitHub</a></li>
+                    <li><a href="https://github.com/T19A0004" target="_blank"><img class="contact-icon" src="img/github.svg"></a></li>
+                    <li><a href="https://t.me/KomilJon_96" target="_blank"><img class="contact-icon" src="img/telegram.svg"></a></li>
+                    <li><a href="https://www.linkedin.com/in/komiljon-riksiyev-842154213" target="_blank"><img class="contact-icon" src="img/linkedin.svg"></a></li>
                 </ul>
             </div>
             <div class="contact-form">
