--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
     
 
     <section class="hero">
-        <h1>Welcome to My Portfolio</h1>
-        <p>Something cool coming soon...</p>
-    </section>
+        <div class="hero-content">
+            <h1>Welcome to My Portfolio</h1>
+            <p>Crafting experiences through design & code.</p>
+        </div>
+    </section>    
 
     <section id="about">
         <h2>About Me</h2>
@@ -40,9 +42,9 @@
                 <p>A passionate <strong>Frontend Developer</strong> who loves to bring ideas to life through code and design.</p>
                 <p>From Uzbekistan, I'm always eager to learn, create, and collaborate on exciting projects. Outside of coding, you'll find me traveling, gaming, or cooking.</p>
                 <ul class="fun-facts">
+                    <li>😸 Love Cats</li>
                     <li>🍣 Love Sushi</li>
                     <li>🎨 Creative Coder</li>
-                    <li>🎮 Moba Gamer</li>
                 </ul>
                 <p>Let’s create something amazing together!</p>
             </div>
