peeking-cat ok, but need fix index-z

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
         <h2>Projects</h2>
         <div class="project-container">
             <div class="project-card">
-                <img src="img/project1.jpg" alt="Project 1">
+                <img src="img/peeking-cat.svg" class="peeking-cat">
+                <img src="img/uzbekistan.jpg" alt="Project 1">
                 <div class="project-info">
                     <h3>Project Title 1</h3>
                     <p>A brief description of what this project is about.</p>
@@ -64,7 +65,8 @@
                 </div>
             </div>
             <div class="project-card">
-                <img src="img/project2.jpg" alt="Project 2">
+                <img src="img/peeking-cat.svg" class="peeking-cat">
+                <img src="img/uzbekistan.jpg" alt="Project 2">
                 <div class="project-info">
                     <h3>Project Title 2</h3>
                     <p>A brief description of what this project is about.</p>
