card fix, padding fix

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <h2>About Me</h2>
         <div class="about-content">
             <div class="avatar">
-                <img src="img/my-portrait.png" alt="Your Name">
+                <img src="img/my-portrait.jpg" alt="Your Name">
             </div>
             <div class="intro-text fade-in-element">
                 <h3>Hi, I'm Komiljon</h3>
@@ -57,20 +57,20 @@
         <div class="project-container">
             <div class="project-card">
                 <img src="img/peeking-cat.svg" class="peeking-cat">
-                <img src="img/uzbekistan.jpg" alt="Project 1">
+                <img src="img/community.png" alt="JDU Community Project">
                 <div class="project-info">
-                    <h3>Project Title 1</h3>
-                    <p>A brief description of what this project is about.</p>
-                    <a href="#">View Project</a>
+                    <h3>JDU Community</h3>
+                    <p>「JDUコミュニティ」は、学生たちがアイデアを共有し、お互いをサポートする場所です。</p>
+                    <a href="http://jdu-community.infinityfreeapp.com" target="_blank">View Project</a>
                 </div>
             </div>
             <div class="project-card">
                 <img src="img/peeking-cat.svg" class="peeking-cat">
-                <img src="img/uzbekistan.jpg" alt="Project 2">
+                <img src="img/store.png" alt="Suits Store Project">
                 <div class="project-info">
-                    <h3>Project Title 2</h3>
-                    <p>A brief description of what this project is about.</p>
-                    <a href="#">View Project</a>
+                    <h3>Suits Store Project</h3>
+                    <p>エレガンスと快適さを纏う、あなたのためのスーツ。ビジネスから特別な日まで、洗練されたスタイルで自信を引き出します。</p>
+                    <a href="https://suits-store.netlify.app" target="_blank">View Project</a>
                 </div>
             </div>
             <!-- Add more project cards as needed -->
