--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <img src="img/community.png" alt="JDU Community Project">
                 <div class="project-info">
                     <h3>JDU Community</h3>
-                    <p>「JDUコミュニティ」は、学生たちがアイデアを共有し、お互いをサポートする場所です。</p>
+                    <p>JDU Community is a place where students can share ideas and support each other.</p>
                     <a href="http://jdu-community.infinityfreeapp.com" target="_blank">View Project</a>
                 </div>
             </div>
@@ -69,7 +69,7 @@
                 <img src="img/store.png" alt="Suits Store Project">
                 <div class="project-info">
                     <h3>Suits Store Project</h3>
-                    <p>エレガンスと快適さを纏う、あなたのためのスーツ。ビジネスから特別な日まで、洗練されたスタイルで自信を引き出します。</p>
+                    <p>Suits that exude elegance and comfort. From business to special occasions, exude confidence and sophisticated style.</p>
                     <a href="https://suits-store.netlify.app" target="_blank">View Project</a>
                 </div>
             </div>
