--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 </head>
 <body>
     <header>
@@ -92,7 +93,7 @@
             </div>
             <div class="contact-form">
                 <h3>Send Me a Message</h3>
-                <form>
+                <form id="contact-form">
                     <div class="form-group">
                         <label for="name">Name</label>
                         <input type="text" id="name" name="name" required>
@@ -107,7 +108,7 @@
                     </div>
                     <button type="submit">Send Message</button>
                 </form>
-            </div>
+            </div>            
         </div>
     </section>   
 
@@ -116,5 +117,6 @@
     </footer>
 
     <script src="js/script.js"></script>
+    <script src="js/email.js"></script>
 </body>
 </html>
