--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
         </div>
     </section>
     
+    <!-- Notification container -->
+    <div id="notification" class="notification hidden"></div>
 
     <section id="contact">
         <h2>Contact</h2>
