--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <div class="logo">My Logo</div>
+        <div class="logo"><img src="img/logo.svg" alt="logo"></div>
         <button id="menu-toggle" aria-label="Toggle menu">
             <img src="img/ham-menu.svg" alt="Open menu" class="menu-icon open-icon">
             <img src="img/close-ham-menu.svg" alt="Close menu" class="menu-icon close-icon">
