added prompt project card

--- a/index.html
+++ b/index.html
@@ -74,6 +74,15 @@
                     <a href="https://suits-store.netlify.app" target="_blank">View Project</a>
                 </div>
             </div>
+            <div class="project-card">
+                <img src="img/peeking-cat.svg" class="peeking-cat">
+                <img src="img/prompt.png" alt="Prompt Sharing Project">
+                <div class="project-info">
+                    <h3>Prompt Sharing Project</h3>
+                    <p>Promptopia is a prompting tool for modern world to discover, create and share creative prompts.</p>
+                    <a href="https://promptopia-t19a0004.vercel.app" target="_blank">View Project</a>
+                </div>
+            </div>
             <!-- Add more project cards as needed -->
         </div>
     </section>
